2025-03-31  Zhengyi Fu  <i@fuzy.me>

	Fix the incorrect buffer modified flag state

	* init.el <git-commit>: Do not overwrite standard-value of
	`git-commit-setup-hook'.
	(+git-commit--log-edit-h): Save the log buffer.

2025-03-31  Zhengyi Fu  <i@fuzy.me>

	* init.el <xref>: Avoid overwrite standard values for
	`xref-after-jump-hook' and `xref-after-return-hook'.

2025-03-31  Zhengyi Fu  <i@fuzy.me>

	* templates/cc-mode.eld: Add snippets for writing tevent
	asynchronous operations.

2025-03-26  Zhengyi Fu  <i@fuzy.me>

	Improve Log-Edit support for Git-Commit mode

	* init.el (+git-commit--log-edit-h): Do not call `log-edit'.
	Directly set params and run `log-edit-hook'.

2025-03-26  Zhengyi Fu  <i@fuzy.me>

	* init.el: Remove names of keymaps.

2025-03-25  Zhengyi Fu  <i@fuzy.me>

	* init.el (+prism--set-colors): Wrap `modus-themes-with-colors'
	and `ef-themes-with-colors' in eval forms.

2025-03-24  Zhengyi Fu  <i@fuzy.me>

	* init.el (prism-project): Better predicate and default values.

2025-03-24  Zhengyi Fu  <i@fuzy.me>

	Add command for enabling `prism-mode' in projects

	* init.el (prism-project): New command.
	(prism-project-mode-history): New variable.

2025-03-23  Zhengyi Fu  <i@fuzy.me>

	* packages.el: Add package AUCTeX.

2025-03-23  Zhengyi Fu  <i@fuzy.me>

	Set `file-name-handler-alist' to nil during startup

	* init.el (+saved-file-name-handler-alist): New variable.  Save
	value for `file-name-handler-alist' during startup.

2025-03-23  Zhengyi Fu  <i@fuzy.me>

	Implement a project-specific hook mechanism

	* init.el (+citre--enable): Removed function.
	(+citre--managed-hook, +citre--enable): Removed variables.
	(+citre-enable): Use `project-add-hook!'.

	* site-lisp/dotemacs-core.el (dotemacs--project-hook-function)
	(project-add-hook!): New functions.
	(dotemacs--project-hooks): New variable.

2025-03-21  Zhengyi Fu  <i@fuzy.me>

	Manage citre-mode like eglot

	* init.el: Removed `citre-auto-enable-citre-mode' from `find-file-hook'.